fixed vertical align on big slider, added two stripes before and after prices, added info about delivery, enlarged pictures on small slider and margins

--- a/resources/scss/product/shop.scss
+++ b/resources/scss/product/shop.scss
@@ -1,12 +1,14 @@
 .shop {
     padding: 0 0 20px 0;
-    &__first-side {
-        display: grid;
-        grid-template-columns: 40px 1fr;
-        grid-column: 1/3;
-        grid-column-gap: 10px;
-        align-items: center;
-        margin: 0 0 30px 0;
+    &__col {
+        &:first-child {
+            display: grid;
+            grid-template-columns: 55px 1fr;
+            grid-column: 1/3;
+            grid-column-gap: 10px;
+            align-items: center;
+            margin: 0 0 30px 0;
+        }
     }
     &__product-name {
         margin: 0 0 30px 0;
@@ -24,11 +26,30 @@
         color: #38AF44;
     }
     &__price {
+        position: relative;
         display: grid;
         grid-template-columns: 1fr 4fr;
         grid-column-gap: 15px;
         grid-row-gap: 5px;
         margin: 0 0 30px 0;
+        &::before {
+            position: absolute;
+            top: -15px;
+            content: '';
+            display: block;
+            height: 0.5px;
+            width: 100%;
+            background: #A5A5A5;
+        }
+        &::after {
+            position: absolute;
+            bottom: -15px;
+            content: '';
+            display: block;
+            height: 0.5px;
+            width: 100%;
+            background: #A5A5A5;
+        }
     }
     &__actual-price {
         grid-column: 1/2;
@@ -73,13 +94,36 @@
         margin: 0 0 10px 0;
     }
     &__description {
-        margin: 0 0 30px 0;
+        margin: 0 0 10px 0;
         font-weight: 500;
         font-size: 14px;
         line-height: 16px;
         color: #333333;
         p {
             margin: 0 0 5px 0;
+        }
+    }
+    &__delivery-info {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: 3px solid #E02424;
+        padding: 3px 10px;
+        border-radius: 10px;
+        max-width: 350px;
+        margin: 0 auto 30px auto;
+        span {
+            color: #424242;
+            &:first-child {
+                margin: 0 5px 0 0;
+                font-size: 28px;
+            }
+            &:last-child {
+                font-size: 16px;
+                text-align: center;
+                line-height: 20px;
+            }
         }
     }
     &__specifications-title {
@@ -187,6 +231,10 @@
     margin: 0 auto 0 0;
     width: 100%;
     max-width: 230px;
+    .slick-track {
+        display: flex;
+        align-items: center;
+    }
     &__image {
         img {
             width: 100%;
@@ -218,8 +266,8 @@
     }
 }
 .shop-products-slider-small.slick-vertical .slick-slide {
-    margin-bottom: 5px;
-    width: 40px !important;
+    margin-bottom: 10px;
+    width: 55px !important;
 }
 .shop-products-slider-small.slick-vertical .slick-slide.slick-current {
     border: 1px solid #38AF44;
@@ -231,9 +279,11 @@
 }
 @media(min-width: 400px) {
     .shop {
-        &__first-side {
-            grid-template-columns: 40px 300px;
-            justify-content: center;
+        &__col {
+            &:first-child {
+                grid-template-columns: 55px 300px;
+                justify-content: center;
+            }
         }
     }
     .shop-products-slider-big {
@@ -245,9 +295,11 @@
 }
 @media(min-width: 500px) {
     .shop {
-        &__first-side {
-            grid-template-columns: 40px 400px;
-            justify-content: center;
+        &__col {
+            &:first-child {
+                grid-template-columns: 55px 400px;
+                justify-content: center;
+            }
         }
     }
     .shop-products-slider-big {
@@ -259,29 +311,30 @@
 }
 @media(min-width: 768px) {
     .shop {
-        .content {
-            >.row {
-                display: grid;
-                grid-template-columns: 3fr 2fr;
-                grid-gap: 20px;
-                >.column {
-                    &:nth-child(2) {
-                      grid-column: 2/3;
-                  }
-                  &:nth-child(3) {
-                    grid-column: 1/2;
-                }
-                &:nth-child(4) {
-                    grid-column: 2/3;
-                }
+        &__row {
+            display: grid;
+            grid-template-columns: 3fr 2fr;
+            grid-gap: 20px;
+        }
+        &__col {
+            &:first-child {
+                grid-template-columns: 55px 1fr;
+                grid-column: 1/2;
+                justify-content: flex-start;
+                margin: 0;
             }
+            &:nth-child(2) {
+              grid-column: 2/3;
+          }
+          &:nth-child(3) {
+            grid-column: 1/2;
+        }
+        &:nth-child(4) {
+            grid-column: 2/3;
         }
     }
-    &__first-side {
-        grid-template-columns: 40px 1fr;
-        grid-column: 1/2;
-        justify-content: flex-start;
-        margin: 0;
+    &__delivery-info {
+        margin: 0 auto;
     }
     &__button {
         width: 270px;
